# asn1scc

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.local.wsl  Dockerfile.runtime  Makefile.debian  README.md  asn1scc.sln  circleci-build.sh  debug_acn.sh  delete-obsolete-fs.sh  detect_obsolete_fs.sh  generate-local-tests.sh  github-build.sh  local-build.sh  make_new_release.sh  run-ci-tests.sh  run-local-build-using-docker-image.sh  todo-to-issue-languages.json  update.net_version.txt
asn1python/: README.md  pyproject.toml
asn1python/manual_clean_reference/: PUS_2_1.py  general.py  pus_1_1_clean.py  pus_2_1_tcs_clean.py  verification_request_clean.py
asn1python/tests/: conftest.py  test_constrained_pos_whole_number.py  test_constrained_whole_number.py  test_ia5_string_char_index_external_field_determinant.py  test_ia5_string_char_index_internal_field_determinant.py  test_int_bcd_const_size.py  test_int_bcd_var_size_length_embedded.py  test_int_bcd_var_size_null_terminated.py  test_int_positive_integer_const_size.py  test_int_positive_integer_const_size_big_endian.py  test_int_positive_integer_const_size_little_endian.py  test_int_positive_integer_var_size_length_embedded.py  test_int_twos_complement_const_size.py  test_int_twos_complement_const_size_big_endian.py  test_int_twos_complement_const_size_little_endian.py  test_int_twos_complement_var_size_length_embedded.py  test_integer.py  test_length.py  test_null.py  test_real.py  test_real_ieee754_32_big_endian.py  test_real_ieee754_32_little_endian.py  test_unsigned_integer.py  (+21 more)
(+505 files in other folders)
